Fix overflow issue in Firefox

--- a/mf_web/volumes/htdocs/sass/elements/std-article.scss
+++ b/mf_web/volumes/htdocs/sass/elements/std-article.scss
@@ -4,9 +4,6 @@
         flex-direction: column;
 
         > .content {
-            width: 100vw;
-            max-width: 100%;
-            overflow: hidden;
             > ._vertical-container.-intro {
                 background-color: $color-blue-4;
             }
