--- a/mf_web/volumes/htdocs/sass/elements/std-article.size_m.scss
+++ b/mf_web/volumes/htdocs/sass/elements/std-article.size_m.scss
@@ -1,6 +1,7 @@
 .std-article {
     > .columns {
         flex-direction: row;
+        overflow: hidden;
 
         > .nav {
             order: 1;
